Bug 41663 - [llvmpipe] SIGSEGV src/gallium/auxiliary/draw/draw_pt_fetch_shade_pipeline_llvm.c:247
Summary: [llvmpipe] SIGSEGV src/gallium/auxiliary/draw/draw_pt_fetch_shade_pipeline_ll...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86 (IA32) All
: medium critical
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-10 15:20 UTC by Vinson Lee
Modified: 2011-10-11 11:54 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2011-10-10 15:20:30 UTC
mesa: f378e8fea0e6bfda2018ee14a99757bde329e0a7 (master)

Run piglit vs-clip-vertex-enables test on llvmpipe. The test crashes on llvmpipe. It passes with softpipe.

$ ./bin/shader_runner tests/spec/glsl-1.20/execution/clipping/vs-clip-vertex-enables.shader_test -auto
Segmentation fault (core dumped)

(gdb) bt
#0  0x00626711 in draw_llvm_shader ()
#1  0x0140c9ac in llvm_pipeline_generic (middle=0x871fe00, fetch_info=0xbfabb5dc, prim_info=0xbfabb5bc)
    at src/gallium/auxiliary/draw/draw_pt_fetch_shade_pipeline_llvm.c:247
#2  0x0140ccd6 in llvm_middle_end_linear_run (middle=0x871fe00, start=0, count=4, prim_flags=0)
    at src/gallium/auxiliary/draw/draw_pt_fetch_shade_pipeline_llvm.c:365
#3  0x0135e45f in vsplit_segment_simple_linear (vsplit=0x871d1e0, flags=0, istart=0, icount=4)
    at src/gallium/auxiliary/draw/draw_pt_vsplit_tmp.h:237
#4  0x0135e7e9 in vsplit_run_linear (frontend=0x871d1e0, start=0, count=4) at src/gallium/auxiliary/draw/draw_split_tmp.h:61
#5  0x01355a10 in draw_pt_arrays (draw=0x8714c98, prim=7, start=0, count=4) at src/gallium/auxiliary/draw/draw_pt.c:113
#6  0x01356610 in draw_vbo (draw=0x8714c98, info=0xbfabb7e4) at src/gallium/auxiliary/draw/draw_pt.c:491
#7  0x01074e7a in llvmpipe_draw_vbo (pipe=0x86e1d00, info=0xbfabb7e4) at src/gallium/drivers/llvmpipe/lp_draw_arrays.c:81
#8  0x011f0603 in st_draw_vbo (ctx=0x8797720, arrays=0x87f462c, prims=0xbfabb88c, nr_prims=1, ib=0x0, index_bounds_valid=1 '\001', 
    min_index=0, max_index=3) at src/mesa/state_tracker/st_draw.c:798
#9  0x0127e6d6 in vbo_draw_arrays (ctx=0x8797720, mode=7, start=0, count=4, numInstances=1) at src/mesa/vbo/vbo_exec_array.c:654
#10 0x0127e83d in vbo_exec_DrawArrays (mode=7, start=0, count=4) at src/mesa/vbo/vbo_exec_array.c:685
#11 0x08095650 in piglit_draw_rect (x=-1, y=-1, w=2, h=2) at piglit/tests/util/piglit-util-gl.c:647
#12 0x0806d504 in piglit_display () at piglit/tests/shaders/shader_runner.c:922
#13 0x0806f8a7 in display () at piglit/tests/util/piglit-framework.c:56
#14 0x004a3820 in fghRedrawWindow (window=0x86e0618, enumerator=0xbfabbba8) at freeglut_main.c:210
#15 fghcbDisplayWindow (window=0x86e0618, enumerator=0xbfabbba8) at freeglut_main.c:227
#16 0x004a7660 in fgEnumWindows (enumCallback=0x4a3790 <fghcbDisplayWindow>, enumerator=0xbfabbba8) at freeglut_structure.c:394
#17 0x004a3cdb in fghDisplayAll () at freeglut_main.c:249
#18 glutMainLoopEvent () at freeglut_main.c:1450
#19 0x004a4605 in glutMainLoop () at freeglut_main.c:1498
#20 0x0806ffa9 in main (argc=2, argv=0xbfabbe34) at piglit/tests/util/piglit-framework.c:294
Comment 1 Vinson Lee 2011-10-10 15:24:26 UTC
The regression occurred sometime between 7.9 and 7.10.

mesa: f378e8fea0e6bfda2018ee14a99757bde329e0a7 (master) - bad
mesa: b9c7773e0dbf75b9bf5142382fa4174a9f2f569f (7.11) - bad
mesa: 1e279de4b01b25df4f153c643f44f8b67dba50e9 (7.10) - bad
mesa: 5078cb68586a52e2a2a991c6e89ed42e8bac7d96 (7.9) - good
Comment 2 Brian Paul 2011-10-11 07:27:56 UTC
Fixed in commit 11938c87a3e5a5b0a16b22f1913567a64015a92d
Comment 3 Vinson Lee 2011-10-11 11:54:10 UTC
mesa: b875838ec302c4e830e13ebd5fa834fd22830279 (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.